--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
       <% sdgs.forEach(sdg => { %>
       <li>
         <a href="/sdg/ <%= sdg.id %>">
-          <img src="https://fdnd-agency.directus.app/assets/<%= sdg.icon %>" />
+          <img src="https://fdnd-agency.directus.app/assets/<%= sdg.icon %>" alt="<%= sdg.name %>"/>
         </a>
       </li>
       <% }) %>
@@ -46,5 +46,10 @@
 
 <section>
   <h2>Stakeholders</h2>
-  <p class="marginbot margintop">kaas</p>
+  <p class="marginbot margintop">      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+    molestiae quas vel sint commodi repudiandae consequuntur voluptatum
+    laborum numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga
+    praesentium optio, eaque rerum! Provident similique accusantium nemo
+    autem. Veritatis obcaecati tenetur iure eius earum ut molestias architecto
+    voluptate</p>
 </section>
