--- a/views/sdg.ejs
+++ b/views/sdg.ejs
@@ -4,7 +4,7 @@
     <section class="wrapper">
         <div class="margin">
             <% if (sdg.icon) { %>
-            <img  src="https://fdnd-agency.directus.app/assets/<%= sdg.icon %>">
+            <img  src="https://fdnd-agency.directus.app/assets/<%= sdg.icon %>" alt="<%= sdg.name %>">
             <% } %>
         </div>
         <h1> <%= sdg.title %> </h1>
